fix bug horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@ section {
     transform: translateY(0);
     transition: all 0.3s ease-in-out;
 }
+
+/* remove horizontal scroll */
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.paragraph {
+    width: 150%;
+}
